--- a/app/views/home/_join_modal.html.erb
+++ b/app/views/home/_join_modal.html.erb
@@ -3,23 +3,41 @@
 <div id="joinTrialModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 id="myModalLabel">Add Trial</h3>
+    <h3 id="myModalLabel">Join Trial</h3>
   </div>
 
   <div class="modal-body" height="500px">
     <div class = "row-fluid">
-    <div class="span5" style ="padding-left:15px;">
-    <h4>Join an Existing Trial</h4>
-    <%= form_tag("/join", :method => "get") do %>
+      <div class="span5" style ="padding-left:15px;">
+      <h4>Enter the Trial Code</h4>
+      <%= form_tag("/join", :method => "get") do %>
 
-    <div class="control-group">
-    <label class="control-label" for="inputEmail">Trial Code</label>
-    <div class="controls">
-       <%= text_field_tag(:trial_id, nil, {:style => "height:30px; width:180px;"})%>
+      <div class="control-group">
+      <label class="control-label" for="inputEmail">Trial Code</label>
+      <div class="controls">
+         <!-- <%= text_field_tag(:trial_id, nil, {:style => "height:30px; width:180px;", :id => "auto_complete"})%> -->
+
+       <%= number_field_tag(:trial_id, nil, {:style => "height:30px; width:180px;"})%> 
+      </div>
     </div>
-  </div>
-  <%= submit_tag "Join Trial", :class=>"m-btn green rnd"%> 
-<% end %>
+    <%= submit_tag "Join Trial", :class=>"m-btn green rnd"%> 
+  <% end %>
+
+    </div>
+
+
+  <div class="span6" style = "margin-bottom:15px; padding-left:30px; border-left: 1px solid #eeeeee">
+     <h4>Enter the Trial Name</h4>
+      <%= form_tag("/joinByName", :method => "get") do %>
+
+      <div class="control-group">
+      <label class="control-label" for="inputEmail">Trial Name</label>
+      <div class="controls">
+         <%= text_field_tag(:trialName, nil, {:style => "height:30px; width:180px;", :id => "auto_complete"})%> 
+      </div>
+    </div>
+    <%= submit_tag "Join Trial", :class=>"m-btn green rnd"%> 
+  <% end %>
 
   </div>
 
@@ -34,21 +52,21 @@
 </div>
 
 <script type="text/javascript">
+   $(document).ready(function() {
+       
 
-function allTrials(query, process) {
-                var data = ["sean", "nikhil", "dan", "ashwin", "shiv"];
-                return data;
 
-}
+      // $("#new_trial").click(function(e) {
+      //   e.preventDefault();
+      //   var trialName = $('#trial_name').value
+      //   alert("error")
+      //   if (trialName == "") {
+      //     alert("error");
+      //   }
+      // });
+    });
 
-$("#new_trial").click(function(e) {
-  e.preventDefault();
-  var trialName = $('#trial_name').value
-  alert("error")
-  if (trialName == "") {
-    alert("error");
-  }
-});
+
 
 </script>
 
