--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -23,7 +23,7 @@
 
 
   <div class="field">   
-    <label class="control-label" for="inputEmail">Trial Name <font color = "red">(required)</font></label>
+    <label class="control-label" for="inputEmail">Trial Name (required)</label>
     <%= f.text_field :trialName, :minimum => 5, :style=>"height:30px; width:228px", :id => "trial_name" %>
   </div>
 
