--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 
 <html>
+
 <!-- Sean Miller, Dan Deng, Ash Sundar -->
 <!-- This is the front end code for the main page -->
     <head>
@@ -312,22 +313,25 @@ class = 'active'
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="/assets/bootstrap.min.js"></script>
         <script src="/assets/bootstrap-datepicker.js"></script>
+          
+        <%= javascript_tag "var autocomplete_trials = #{ @autocomplete_trials.to_json };" %>  
         <script type="text/javascript">
         $(document).ready(function(){ 
-        $(".datepicker").datepicker()
-        .on('changeDate', function(ev){
-    });
+          $(".datepicker").datepicker()
+          .on('changeDate', function(ev){
+          });
 
-      })
-        $(document).ready(function(){ 
-$('.delete_post').click(function(){
-    $(this).closest('tr').fadeOut();  
-}); 
-$('#editEntry').click(function(){
-  console.log("clicked button!")
-    $(this).closest('tr').fadeOut();  
-});  
-});
+          $('.delete_post').click(function(){
+              $(this).closest('tr').fadeOut();  
+          }); 
+          $('#editEntry').click(function(){
+            console.log("clicked button!")
+              $(this).closest('tr').fadeOut();  
+          });  
+          var autocomplete_items = ["sean", "dan", "dwayne", "shiv"];
+          $('#auto_complete').typeahead({source: autocomplete_trials});
+
+        });
         </script>
 
         
